# libdaytimeprotocol

./: .gitignore  CMakeLists.txt  DaytimeMessageProtocol.pc.in  DaytimeMessageProtocolClient.cpp  DaytimeMessageProtocolClient.h  DaytimeMessageProtocolServer.cpp  DaytimeMessageProtocolServer.h
examples/: NIST-daytime.cpp  daytime-server.cpp
